force-app/main/default/objects/outfunds__Funding_Request_Role__c/outfunds__Funding_Request_Role__c.object-meta.xml
<CustomObject>
    <description>Tracks related Contacts on Funding Requests.</description>
    <label>Funding Request Role</label>
    <nameField>
        <displayFormat>FR-{000000}</displayFormat>
        <label>Funding Request Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Request Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>