force-app/main/default/objects/outfunds__Funding_Request_Role__c/fields/outfunds__Funding_Request__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Funding_Request__c</fullName>
    <label>Funding Request</label>
    <referenceTo>outfunds__Funding_Request__c</referenceTo>
    <relationshipLabel>Funding Request Roles</relationshipLabel>
    <relationshipName>Funding_Request_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>