force-app/main/default/objects/outfunds__Funding_Request_Role__c/fields/outfunds__Role__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grant Manager</fullName>
            </value>
            <value>
                <fullName>Financial Manager</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>