force-app/main/default/objects/outfunds__Funding_Request_Role__c/fields/outfunds__Status__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>